Forcefully update branch with local changes