@@ -11,6 +11,8 @@ import java.awt.event.MouseEvent;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
 
+import java.awt.event.*;
+
 public class GameWindow extends JFrame {
     private Controller _controller;
     private MainWindow _mainWindow;
@@ -47,95 +49,87 @@ public class GameWindow extends JFrame {
         checkAndTriggerAITurn();
     }
 
+    private void applySovietDialogStyle() {
+        UIManager.put("OptionPane.messageFont", new Font("Serif", Font.BOLD, 18));
+        UIManager.put("OptionPane.buttonFont", new Font("Serif", Font.PLAIN, 16));
+        UIManager.put("OptionPane.messageForeground", new Color(200, 30, 30));
+        UIManager.put("Panel.background", new Color(30, 0, 0));
+    }
+
     private void initGUI() {
         JPanel topPanel = new JPanel(new GridLayout(2, 1));
         topPanel.setBackground(new Color(60, 0, 0));
         currentPlayerLabel = new JLabel("Current Player: (not set yet)", SwingConstants.CENTER);
-        currentPlayerLabel.setFont(new Font("Arial", Font.BOLD, 24));
+        currentPlayerLabel.setFont(new Font("Serif", Font.BOLD, 24));
         currentPlayerLabel.setForeground(Color.WHITE);
         topPanel.add(currentPlayerLabel);
 
         currentBalanceLabel = new JLabel("Current Balance: 0 ₽", SwingConstants.CENTER);
-        currentBalanceLabel.setFont(new Font("Arial", Font.BOLD, 18));
+        currentBalanceLabel.setFont(new Font("Serif", Font.BOLD, 18));
         currentBalanceLabel.setForeground(Color.WHITE);
         topPanel.add(currentBalanceLabel);
 
         JPanel bottomPanel = new JPanel(new FlowLayout(FlowLayout.CENTER, 20, 10));
-        bottomPanel.setBackground(new Color(30, 0, 0)); // Deep maroon
+        bottomPanel.setBackground(new Color(30, 0, 0));
 
         // Roll Dice Button
-        JButton rollDiceButton = createImageButton(
-                "resources/dicesRolling.png",
-                "Roll the dice to move",
-                e -> {
-                    int[] diceValues = _controller.rollDice();
-                    dualDicePanel.startAnimation(diceValues[0], diceValues[1]);
-                    new Timer(2000, evt -> {
-                        ((Timer) evt.getSource()).stop();
-                        String result = _controller.movePlayerAfterDiceRoll(diceValues);
-                        updateCurrentPlayerLabel();
-                        updateCurrentBalanceLabel();
-                        boardView.refreshBoard();
-                        checkAndTriggerAITurn();
-                    }).start();
-                }
-        );
+        JButton rollDiceButton = createImageButton("resources/dicesRolling.png", "Roll the dice to move", e -> {
+            int[] diceValues = _controller.rollDice();
+            dualDicePanel.startAnimation(diceValues[0], diceValues[1]);
+            new Timer(2000, evt -> {
+                ((Timer) evt.getSource()).stop();
+                String result = _controller.movePlayerAfterDiceRoll(diceValues);
+                updateCurrentPlayerLabel();
+                updateCurrentBalanceLabel();
+                boardView.refreshBoard();
 
-        JButton leaveButton = createImageButton(
-                "resources/goBack.png",
-                "Leave Game",
-                e -> {
-                    MusicPlayer.playSoundEffect(MainWindow.filePath);
-                    int choice = JOptionPane.showConfirmDialog(
-                            this,
-                            "Do you want to save the game before leaving?",
-                            "Save Game",
-                            JOptionPane.YES_NO_CANCEL_OPTION
-                    );
-                    if (choice == JOptionPane.CANCEL_OPTION) return;
-
-                    if (choice == JOptionPane.YES_OPTION) {
-                        String saveName = JOptionPane.showInputDialog(
-                                this,
-                                "Enter save game file name (e.g., mySave.json):",
-                                "Save Game",
-                                JOptionPane.QUESTION_MESSAGE
-                        );
-                        if (saveName != null && !saveName.trim().isEmpty()) {
-                            _controller.saveGame(saveName.trim());
-                            JOptionPane.showMessageDialog(this, "Game saved successfully!");
-                        } else {
-                            JOptionPane.showMessageDialog(this, "Invalid file name. Game not saved.");
-                            return;
-                        }
-                    }
-                    dispose();
+                if (result != null && !result.isBlank()) {
+                    applySovietDialogStyle();
+                    JOptionPane.showMessageDialog(this, result, "Turn Result", JOptionPane.INFORMATION_MESSAGE);
                 }
-        );
 
-        JButton playerInfoButton = createImageButton(
-                "resources/playerInfoWindow.png",
-                "Show player status, money, position, and properties",
-                e -> {
-                    MusicPlayer.playSoundEffect(MainWindow.filePath);
-                    if (playerInfoWindow == null || !playerInfoWindow.isDisplayable()) {
-                        playerInfoWindow = new PlayerInfoWindow(_controller);
-                    }
-                    playerInfoWindow.setVisible(true);
-                    playerInfoWindow.refreshData();
-                }
-        );
+                checkAndTriggerAITurn();
+            }).start();
+        });
 
-        JButton undoButton = createImageButton(
-                "resources/undo.png",
-                "Undo Last Action",
-                e -> {
-                    _controller.undoLastCommand();
-                    updateCurrentPlayerLabel();
-                    updateCurrentBalanceLabel();
-                    boardView.refreshBoard();
+        JButton leaveButton = createImageButton("resources/goBack.png", "Leave Game", e -> {
+            MusicPlayer.playSoundEffect(MainWindow.filePath);
+            applySovietDialogStyle();
+            int choice = JOptionPane.showConfirmDialog(this,
+                    "Do you want to save the game before leaving?",
+                    "Save Game", JOptionPane.YES_NO_CANCEL_OPTION);
+            if (choice == JOptionPane.CANCEL_OPTION) return;
+
+            if (choice == JOptionPane.YES_OPTION) {
+                String saveName = JOptionPane.showInputDialog(this,
+                        "Enter save game file name (e.g., mySave.json):",
+                        "Save Game", JOptionPane.QUESTION_MESSAGE);
+                if (saveName != null && !saveName.trim().isEmpty()) {
+                    _controller.saveGame(saveName.trim());
+                    JOptionPane.showMessageDialog(this, "Game saved successfully!");
+                } else {
+                    JOptionPane.showMessageDialog(this, "Invalid file name. Game not saved.");
+                    return;
                 }
-        );
+            }
+            dispose();
+        });
+
+        JButton playerInfoButton = createImageButton("resources/playerInfoWindow.png", "Show player status, money, position, and properties", e -> {
+            MusicPlayer.playSoundEffect(MainWindow.filePath);
+            if (playerInfoWindow == null || !playerInfoWindow.isDisplayable()) {
+                playerInfoWindow = new PlayerInfoWindow(_controller);
+            }
+            playerInfoWindow.setVisible(true);
+            playerInfoWindow.refreshData();
+        });
+
+        JButton undoButton = createImageButton("resources/undo.png", "Undo Last Action", e -> {
+            _controller.undoLastCommand();
+            updateCurrentPlayerLabel();
+            updateCurrentBalanceLabel();
+            boardView.refreshBoard();
+        });
 
         bottomPanel.add(makeButtonCard(rollDiceButton));
         bottomPanel.add(makeButtonCard(leaveButton));
@@ -170,7 +164,7 @@ public class GameWindow extends JFrame {
         updateCurrentBalanceLabel();
     }
 
-    private JButton createImageButton(String imagePath, String toolTip, java.awt.event.ActionListener listener) {
+    private JButton createImageButton(String imagePath, String toolTip, ActionListener listener) {
         ImageIcon originalIcon = new ImageIcon(imagePath);
         Image scaledImage = originalIcon.getImage().getScaledInstance(60, 60, Image.SCALE_SMOOTH);
         JButton button = new JButton(new ImageIcon(scaledImage));
@@ -183,24 +177,16 @@ public class GameWindow extends JFrame {
         return button;
     }
 
-
     private JPanel makeButtonCard(JButton button) {
         JPanel wrapper = new JPanel(new BorderLayout()) {
             @Override
             protected void paintComponent(Graphics g) {
                 Graphics2D g2 = (Graphics2D) g;
                 g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
-
-                // Gradient background
-                GradientPaint gp = new GradientPaint(0, 0, new Color(60, 0, 0),
-                        0, getHeight(), new Color(90, 0, 0));
-                g2.setPaint(gp);
+                g2.setPaint(new GradientPaint(0, 0, new Color(60, 0, 0), 0, getHeight(), new Color(90, 0, 0)));
                 g2.fillRoundRect(0, 0, getWidth(), getHeight(), 20, 20);
-
-                // Border glow
                 g2.setColor(new Color(200, 200, 200, 80));
                 g2.drawRoundRect(0, 0, getWidth() - 1, getHeight() - 1, 20, 20);
-
                 super.paintComponent(g);
             }
         };
@@ -210,7 +196,6 @@ public class GameWindow extends JFrame {
         button.setOpaque(false);
         button.setContentAreaFilled(false);
 
-        // Hover effect
         wrapper.addMouseListener(new MouseAdapter() {
             @Override
             public void mouseEntered(MouseEvent e) {
@@ -226,7 +211,6 @@ public class GameWindow extends JFrame {
         wrapper.add(button, BorderLayout.CENTER);
         return wrapper;
     }
-
 
     private void updateCurrentPlayerLabel() {
         currentPlayerLabel.setText("Current Player: " + _controller.getCurrentPlayerName());
@@ -246,7 +230,13 @@ public class GameWindow extends JFrame {
                 dualDicePanel.startAnimation(diceValues[0], diceValues[1]);
                 new Timer(2000, evt2 -> {
                     ((Timer) evt2.getSource()).stop();
-                    ((AIPlayer) current).takeTurnWithDice(diceValues, _controller.getMonopolyGame(), _controller);
+                    String result = ((AIPlayer) current).takeTurnWithDice(diceValues, _controller.getMonopolyGame(), _controller);
+
+                    if (result != null && !result.isBlank()) {
+                        applySovietDialogStyle();
+                        JOptionPane.showMessageDialog(this, result, "AI Turn Result", JOptionPane.INFORMATION_MESSAGE);
+                    }
+
                     updateCurrentPlayerLabel();
                     updateCurrentBalanceLabel();
                     boardView.refreshBoard();
